dev/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: carbide-api }
          http_filters:
          - name: envoy.filters.http.router
  - name: listener_1
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: carbide-pxe
                  timeout: 0s # fix to allow large files to be proxied, like a file server
          http_filters:
          - name: envoy.filters.http.router
  - name: listener_2
    address:
      socket_address: { address: 0.0.0.0, port_value: 11078 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: carbide-bootstrap }
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: carbide-api
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: carbide
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: carbide-api
                port_value: 1079
  - name: carbide-pxe
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: carbide
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: carbide-pxe
                port_value: 1080
  - name: carbide-bootstrap
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: carbide
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: carbide-bootstrap
                port_value: 1078
